<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoscreenActivity" >

	<LinearLayout
            android:id="@+id/mainmenu_content_controls"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

         <TextView
             android:id="@+id/infoscreenText1"
             android:text="@string/info_title"
             android:textSize="25sp"
             android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:background="@color/white"
             android:layout_width="fill_parent"
             android:layout_gravity="center"
             android:gravity="center"
             android:layout_height="wrap_content"/>
             
         <TextView
             android:id="@+id/infoscreenText2"
             android:text="@string/developers"
             android:textSize="20sp"
             android:layout_marginTop="15dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
         
          <RadioButton
		        android:id="@+id/radioInfoButton1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:clickable="false"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="15dp"
		        android:textSize="20sp"
		        android:text="@string/developer1" />
         
          <RadioButton
		        android:id="@+id/radioInfoButton2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:clickable="false"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="15dp"
		        android:textSize="20sp"
		        android:text="@string/developer2" />
         
          <RadioButton
		        android:id="@+id/radioInfoButton3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:clickable="false"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="15dp"
		        android:textSize="20sp"
		        android:text="@string/developer3" />
             
           <TextView
             android:id="@+id/infoscreenText3"
             android:text="@string/supervisors"
             android:textSize="20sp"
             android:layout_marginTop="15dp"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"/>
         
          <RadioButton
		        android:id="@+id/radioInfoButton4"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:clickable="false"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="15dp"
		        android:textSize="20sp"
		        android:text="@string/supervisor1" />
         
          <RadioButton
		        android:id="@+id/radioInfoButton5"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:clickable="false"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="15dp"
		        android:textSize="20sp"
		        android:text="@string/supervisor2" />
     </LinearLayout>

</RelativeLayout>